deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: git-devops-pipeline-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: git-devops-pipeline-app
  template:
    metadata:
      labels:
        app: git-devops-pipeline-app
    spec:
      containers:
        - name: git-devops-pipeline-app

          image: docker.io/lance0821/devops-pipeline:1.0.0-70

          resources:
            limits:
              memory: '256Mi'
              cpu: '500m'
          ports:
            - containerPort: 8080
