service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-pipeline-service
  labels:
    app: devops-pipeline
spec:
  selector:
    app: devops-pipeline
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
