ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-pipeline-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: 'nginx'
  rules:
    - host: devopstest.lancelewandowski.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devops-pipeline-service
                port:
                  number: 8080
